Prevent closing, spacing on loading

--- a/static/design/css.less
+++ b/static/design/css.less
@@ -207,6 +207,10 @@ code{
   border-radius: 7px 0 0 7px;
   box-shadow: 0px 0px 0px 1px #000000;
 
+  .loading {
+    padding: 10px;
+  }
+
   @media (max-width: 875px) {
     float: none;
     margin: 20px auto;
